--- a/redis/集群/j_cluster/docker-compose.yml
+++ b/redis/集群/j_cluster/docker-compose.yml
@@ -1,134 +1,89 @@
-version: "3.0"
+version: "3.6"
 services:
-  redis-cluster1:
-     image: redis-cluster
-     container_name: redis-cluster1
-     working_dir: /config
-     environment:
-       - PORT=6391
-     ports:
-       - "6391:6379"
-       - "16391:16391"
-     stdin_open: true
+  cluster1: # 服务器名称。注意：不是容器名称
+     image: redis:6.0.10 # 镜像文件
+     container_name: redis-c1 # 容器名称
      networks:
-        redis-cluster:
-          ipv4_address: 172.50.0.2
-     tty: true
-     privileged: true
-     volumes: ["/usr/docker/redis-cluster/config:/config"]
-     entrypoint:
-       - /bin/bash
-      # - redis.sh
-  redis-cluster2:
-       image: redis-cluster
-       working_dir: /config
-       container_name: redis-cluster2
-       environment:
-              - PORT=6392
-       networks:
-          redis-cluster:
-             ipv4_address: 172.50.0.3
-       ports:
-         - "6392:6379"
-         - "16392:16392"
-       stdin_open: true
-       tty: true
-       privileged: true
-       volumes: ["/usr/docker/redis-cluster/config:/config"]
-       entrypoint:
-         - /bin/bash
-       #  - redis.sh
-  redis-cluster3:
-       image: redis-cluster
-       container_name: redis-cluster3
-       working_dir: /config
-       environment:
-              - PORT=6393
-       networks:
-          redis-cluster:
-            ipv4_address: 172.50.0.4
-       ports:
-         - "6393:6379"
-         - "16393:16393"
-       stdin_open: true
-       tty: true
-       privileged: true
-       volumes: ["/usr/docker/redis-cluster/config:/config"]
-       entrypoint:
-         - /bin/bash
-        # - redis.sh
-  redis-cluster4:
-       image: redis-cluster
-       container_name: redis-slave1
-       working_dir: /config
-       environment:
-            - PORT=6394
-       networks:
-          redis-slave:
-             ipv4_address: 172.30.0.2
-       ports:
-         - "6394:6379"
-         - "16394:16394"
-       stdin_open: true
-       tty: true
-       privileged: true
-       volumes: ["/usr/docker/redis-cluster/config:/config"]
-       entrypoint:
-         - /bin/bash
-         #- redis.sh
-  redis-cluster5:
-       image: redis-cluster
-       working_dir: /config
-       container_name: redis-slave2
-       environment:
-             - PORT=6395
-       ports:
-         - "6395:6379"
-         - "16395:16395"
-       stdin_open: true
-       networks:
-          redis-slave:
-              ipv4_address: 172.30.0.3
-       tty: true
-       privileged: true
-       volumes: ["/usr/docker/redis-cluster/config:/config"]
-       entrypoint:
-         - /bin/bash
-         #- redis.sh
-  redis-cluster6:
-       image: redis-cluster
-       container_name: redis-slave3
-       working_dir: /config
-       environment:
-          - PORT=6396
-       ports:
-         - "6396:6379"
-         - "16396:16396"
-       stdin_open: true
-       networks:
-          redis-slave:
-            ipv4_address: 172.30.0.4
-       tty: true
-       privileged: true
-       volumes: ["/usr/docker/redis-cluster/config:/config"]
-       entrypoint:
-         - /bin/bash
-         #- redis.sh
+        net-rediscluster:
+          ipv4_address: 172.31.0.11
+    ports:
+      - "6301:6379" # 客户端连接端口
+      - "16301:16391" # 节点通信端口
+    volumes: # 数据卷
+      - /data/j_cluster/11:/redis # redis数据文件+配置文件
+    working_dir: /redis # 指定容器中的工作目录
+    #environment: # 设置环境变量
+    #  - PORT=6391
+    #stdin_open: true # 打开标准输入
+    #tty: true #模拟一个伪终端
+    #privileged: true #允许容器中运行一些特权命令
+    #entrypoint:
+      #- /bin/bash
+  cluster2:
+     image: redis:6.0.10
+     container_name: redis-c2
+     networks:
+        net-rediscluster:
+          ipv4_address: 172.31.0.12
+    ports:
+      - "6302:6379"
+      - "16302:16391"
+    volumes:
+      - /data/j_cluster/12:/redis
+    working_dir: /redis
+  cluster3:
+     image: redis:6.0.10
+     container_name: redis-c3
+     networks:
+        net-rediscluster:
+          ipv4_address: 172.31.0.13
+    ports:
+      - "6303:6379"
+      - "16303:16391"
+    volumes:
+      - /data/j_cluster/13:/redis
+    working_dir: /redis
+  cluster4:
+     image: redis:6.0.10
+     container_name: redis-c4
+     networks:
+        net-rediscluster:
+          ipv4_address: 172.31.0.14
+    ports:
+      - "6304:6379"
+      - "16304:16391"
+    volumes:
+      - /data/j_cluster/14:/redis
+    working_dir: /redis
+  cluster5:
+     image: redis:6.0.10
+     container_name: redis-c5
+     networks:
+        net-rediscluster:
+          ipv4_address: 172.31.0.15
+    ports:
+      - "6305:6379"
+      - "16305:16391"
+    volumes:
+      - /data/j_cluster/15:/redis
+    working_dir: /redis
+  cluster6:
+     image: redis:6.0.10
+     container_name: redis-c6
+     networks:
+        net-rediscluster:
+          ipv4_address: 172.31.0.16
+    ports:
+      - "6306:6379"
+      - "16306:16391"
+    volumes:
+      - /data/j_cluster/16:/redis
+    working_dir: /redis
 networks:
-  redis-cluster:
-     driver: bridge
-     ipam:
+  net-rediscluster:
+     driver: bridge # 网络后端的驱动，默认为 bridge
+     ipam: # 所有主机共享同一个 subnet，容器启动时会顺序分配 IP
        driver: default
        config:
           -
-           subnet: 172.50.0.0/16
-  redis-slave:
-       driver: bridge
-       ipam:
-         driver: default
-         config:
-            -
-             subnet: 172.30.0.0/16
-  redis-test:
-     external:
-       name: mynetwork
+           subnet: 172.31.0.0/16
